--- a/index.html
+++ b/index.html
@@ -3,3 +3,5 @@ layout: default
 title: Home
 ---
 
+<a href="https://github.com/lymsia" target="_blank"><i class="fab fa-github"></i></a>
+<a href="http://www.linkedin.com/in/roy-w-006840154" target="_blank"><i class="fab fa-linkedin-in"></i></a>
