--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@ layout: default
 title: Home
 ---
 
-<a href="https://github.com/lymsia" target="_blank"><i class="fab fa-github"></i></a>
-<a href="http://www.linkedin.com/in/roy-w-006840154" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+<div>
+  <a href="https://github.com/lymsia" target="_blank"><i class="fab fa-github"></i></a>
+  <a href="http://www.linkedin.com/in/roy-w-006840154" target="_blank"><i class="fab fa-linkedin"></i></a>
+</div>
+<div>
+  I have been involved on software development since 2008, since then have been involved on various interesting projects.
+</div>
