--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@ title: Home
 ---
 
 <div>
+<span style="font-size: 48px; color: Dodgerblue;">
   <a href="https://github.com/lymsia" target="_blank"><i class="fab fa-github"></i></a>
   <a href="http://www.linkedin.com/in/roy-w-006840154" target="_blank"><i class="fab fa-linkedin"></i></a>
+</span>
 </div>
 <div>
   I have been involved on software development since 2008, since then have been involved on various interesting projects.
